--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -427,6 +427,10 @@ ul.social-icons {
       text-align: center;
       box-sizing: border-box;
     }
+
+    div.current-page {
+      font-weight: bold;
+    }
   }
 }
 
